--- a/treino.html
+++ b/treino.html
@@ -17,39 +17,65 @@
 
 <body>
 
-    <div class="lembrando">
+    <div class="conteiner">
 
-        <h1>
-            Cardápio
-        </h1>
+        <div class="lembrando">
 
-        <h2>
-            Faça sua escolha:
-        </h2>
+            <div class="tentando">
 
-
-        <li>
-            bebidas:
             
-        </li>
-            suco verde
-            </ol>
 
-        <li>
-            Comidas:
-        </li>
-            Pure de batata
-            </ol>
+                <h1>
+                    <em>Cardápio</em>
+                </h1>
 
-        <li>
-            Sobremesas:
-        </li>
-            Açai
-            </ol>
+                
+                <h2>
+                    Faça sua escolha:
+                </h2>
+
+                <label>
+                    <input type="checkbox">
+                    Entradas
+                </label>
+
+                <li>
+                    Chipps
+                </li>
+
+
+                <label>
+                    <input type="checkbox">
+                    bebidas:
+                </label>
+
+                <li>
+                    Suco verde
+                </li>
+
+                    <label>
+                        <input type="checkbox">
+                        Comidas:
+                    </label>
+
+                <li>
+                    Pure de batata
+                </li>
+
+                    <label>
+                        <input type="checkbox">
+                        Sobremesas:
+                    </label>
+
+                <li>
+                    Açai
+                </li>
+
+            </div>
+
+        </div>
 
     </div>
-
-
 </body>
 
 
