--- a/treino.html
+++ b/treino.html
@@ -23,25 +23,39 @@
 
             <div class="tentando">
 
-            
+
 
                 <h1>
                     <em>Cardápio</em>
                 </h1>
 
-                
+
                 <h2>
                     Faça sua escolha:
                 </h2>
 
-                <label>
-                    <input type="checkbox">
-                    Entradas
-                </label>
 
-                <li>
-                    Chipps
-                </li>
+                <div class="arrumando">
+
+                    <label>
+                        <input type="checkbox">
+                        Entradas
+                    </label>
+
+                    <li>
+                        Chipps
+                    </li>
+                    <li>
+                        Pepino
+                    </li>
+                    <li>
+                        Ovinho
+                    </li>
+                    <li>
+                        Palmito
+                    </li>
+                </div>
+
 
 
                 <label>
@@ -53,19 +67,25 @@
                     Suco verde
                 </li>
 
-                    <label>
-                        <input type="checkbox">
-                        Comidas:
-                    </label>
+
+
+
+                <label>
+                    <input type="checkbox">
+                    Comidas:
+                </label>
 
                 <li>
                     Pure de batata
                 </li>
 
-                    <label>
-                        <input type="checkbox">
-                        Sobremesas:
-                    </label>
+
+
+
+                <label>
+                    <input type="checkbox">
+                    Sobremesas:
+                </label>
 
                 <li>
                     Açai
