--- a/treino.html
+++ b/treino.html
@@ -19,9 +19,9 @@
 
     <div class="conteiner">
 
-        <div class="lembrando">
+        <div class="Lembrando">
 
-            <div class="tentando">
+            <div class="Tentando">
 
 
 
@@ -35,7 +35,8 @@
                 </h2>
 
 
-                <div class="arrumando">
+
+                <div class="Arrumando">
 
                     <label>
                         <input type="checkbox">
@@ -58,44 +59,78 @@
 
 
 
-                <label>
-                    <input type="checkbox">
-                    bebidas:
-                </label>
+                <div class="Ajeitando">
+                    <label>
+                        <input type="checkbox">
+                        bebidas:
+                    </label>
 
-                <li>
-                    Suco verde
-                </li>
-
-
-
-
-                <label>
-                    <input type="checkbox">
-                    Comidas:
-                </label>
-
-                <li>
-                    Pure de batata
-                </li>
-
+                    <li>
+                        Suco verde
+                    </li>
+                    <li>
+                        Suco de limão
+                    </li>
+                    <li>
+                        Suco de Laranja
+                    </li>
+                    <li>
+                        Suco de abacaxi
+                    </li>
+                </div>
 
 
 
+                <div class="Organizando">
+                    <label>
+                        <input type="checkbox">
+                        Comidas:
+                    </label>
+
+                    <li>
+                        Pure de batata
+                    </li>
+                    <li>
+                        Macarrão a Bolonhesa
+                    </li>
+                    <li>
+                        Arroz com Camarão
+                    </li>
+                    <li>
+                        batata Frita
+                    </li>
+                </div>
+
+
+
+                <div class="Dandosequência">
                 <label>
                     <input type="checkbox">
                     Sobremesas:
                 </label>
 
                 <li>
-                    Açai
+                    Açai com leite ninho
                 </li>
+                <li>
+                    Sorvete com nutella
+                </li>
+                <li>
+                    Coxinha de morango
+                </li>
+                <li>
+                    Brigadeiro de panela
+                </li>
+                </div>
 
             </div>
 
         </div>
 
     </div>
+
+    
+
 </body>
 
 
